# c-data-structures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  demos.c
lib/: CMakeLists.txt
lib/include/: Queue.h  Stack.h
lib/src/: Queue.c  Stack.c
tests/: CMakeLists.txt  tests.c
